Unify style of vendors and special guests - add links to guests and images to vendors

--- a/event/special-guests.html
+++ b/event/special-guests.html
@@ -94,20 +94,22 @@
 
 <div class="row content">
     <h1>RVR Special Guests</h1>
-  <p>We are so excited to have all of our wonderful special guests at our 2021 event! We will be gradually adding our special guests to this page as their situation with respect to COVID-19 becomes clearer. Thank you for your patience! <a href="https://buttondown.email/prettyprincessclub">Subscribe to our email list for updates</a> and scroll to learn more about our confirmed special guests (so far!) for 2021:</p>
-    <h2>Puvithel</h2>
-  <div class="row">
-    <div class="col-md-6">
-  <img src="../images/guests/puvithel.jpg" class="img-fluid" alt="Puvithel wearing her brand"/>
+  <p>We are so excited to have all of our wonderful special guests at our 2021 event! We will be gradually adding our special guests to this page as their situation with respect to COVID-19 becomes clearer. Thank you for your patience! <a href="https://buttondown.email/prettyprincessclub">Subscribe to our email list for updates</a> and scroll to learn more about our confirmed special guests (so far!) for 2021 (in alphabetical order):</p>
+  <hr>
+  <h2><a href="https://www.fluffykawaiijo.com">Fluffy Kawaii Jo</a></h2>
+    <div class="row">
+        <div class="col-md-4">
+  <img src="../images/guests/FluffyKawaiiJo4.jpg" class="img-fluid" alt="Fluffy Kawaii Jo in front of cherry blossoms"/>
 </div>
-<div class="col-md-6">
-  <p>Puvithel is an alternative fashion designer based in Pittsburgh, USA who has been making and designing original handmade jewelry, accessories, clothing and handbags for J-fashion and alternative styles since 2015.</p>
-  <p>Puvithel is about unabashed self-expression and spans many styles, including punk, gothic, lolita, and menhera. Regardless of style, Puvithel's items are loud – inspired by the in-your-face aesthetic of American gothic fashion. Puvithel believes that fashion is a beneficial form of expression, a belief that is imbued in every item she makes. Every series has its own style and narrative to aid you in telling your own story. </p>
-  <p>You can follow Puvithel on <a href="https://www.instagram.com/puvithel">Instagram</a> and <a href="https://www.facebook.com/Puvithel">Facebook</a>. You can also browse her website at <a href="http://www.puvithel.com">http://www.puvithel.com</a> and <a href="http://puvithel.etsy.com">Etsy</a>.</p>
+  <div class="col-md-8">
+  <p>Everybody Can Be Kawaii – No matter what age, gender, color or body type you are, you deserve to feel kawaii as fluff and good about yourself.</p>
+
+<p>Fluffy Kawaii Jo lives in Switzerland and her mission is to help you feel fantastic wearing the stuff that makes you happy. She makes videos about lolita fashion and Kawaii culture in general, from practical lifehacks for people new to the fashion, product reviews, event reports and interviews with people from the scene as well as entertaining and funny videos like her Lolitas vs Normies and Action Lolita series – proving that not just everybody can be kawaii, but you can be kawaii anywhere, doing anything as well.</p>
+  <p>You can find her at <a href="https://www.fluffykawaiijo.com">fluffykawaiijo.com</a>, on <a href="http://www.youtube.com/fluffykawaiijo">Youtube</a>, <a href="http://www.instagram.com/fluffykawaiijo">Instagram</a>, <a href="http://www.facebook.com/fluffykawaiijo">Facebook</a>, and <a href="http://www.patreon.com/fluffykawaiijo">Patreon</a>.</p>
 </div>
 </div>
   <hr>
-  <h2>Kuroshiro Kawaii</h2>
+  <h2><a href="https://kskawaii.com/">Kuroshiro Kawaii</a></h2>
     <div class="row">
         <div class="col-md-4">
   <img src="../images/guests/KSKLogo_PROFILE.jpg" class="img-fluid" alt="Kuroshiro Kawaii logo"/>
@@ -120,6 +122,18 @@
   <p>The “kuro” in their name stands for punk, gothic, and visual fashion; while “shiro” stands for elegant, princely, and sweet lolita and ouji fashions. It also reflects another duality that is important to the attitude of their shop: good and evil, angel and devil, order and chaos. The words “kuro” and “shiro,” and their associated meaning in kanji, really pin down what they wanted for the look and feel of their shop and the brands they want to carry.</p>
   <p>“Kawaii” is a word commonly known and familiar to most Americans, and reflects a large portion of the styles they will carry: kawaii and Harajuku styles.</p>
   <p>You can buy from Kuroshiro Kawaii on their webshop: <a href="https://kskawaii.com/">https://kskawaii.com/</a>. You can also follow them on <a href="https://www.facebook.com/kuroshirokawaii/">Facebook</a>, <a href="https://www.instagram.com/kskawaiishop/">Instagram</a>, and <a href="https://twitter.com/KSKawaiiShop">Twitter</a>.</p>
+</div>
+</div>
+<hr>
+  <h2><a href="http://www.puvithel.com">Puvithel</a></h2>
+  <div class="row">
+    <div class="col-md-6">
+  <img src="../images/guests/puvithel.jpg" class="img-fluid" alt="Puvithel wearing her brand"/>
+</div>
+<div class="col-md-6">
+  <p>Puvithel is an alternative fashion designer based in Pittsburgh, USA who has been making and designing original handmade jewelry, accessories, clothing and handbags for J-fashion and alternative styles since 2015.</p>
+  <p>Puvithel is about unabashed self-expression and spans many styles, including punk, gothic, lolita, and menhera. Regardless of style, Puvithel's items are loud – inspired by the in-your-face aesthetic of American gothic fashion. Puvithel believes that fashion is a beneficial form of expression, a belief that is imbued in every item she makes. Every series has its own style and narrative to aid you in telling your own story. </p>
+  <p>You can follow Puvithel on <a href="https://www.instagram.com/puvithel">Instagram</a> and <a href="https://www.facebook.com/Puvithel">Facebook</a>. You can also browse her website at <a href="http://www.puvithel.com">http://www.puvithel.com</a> and <a href="http://puvithel.etsy.com">Etsy</a>.</p>
 </div>
 </div>
   <!--
@@ -154,19 +168,6 @@
   <p>Follow Lor and Holly's adventures on <a href="http://youtube.com/c/lovelylor">Youtube</a>, as well as <a href="http://instagram.com/lovelylor">Lor's Instagram</a>, <a href="https://www.facebook.com/lovelylorofficial/">Facebook</a>, and <a href="http://twitter.com/loveliestlor">Twitter</a>, as well as <a href="https://www.instagram.com/flynnski73/">Holly's Instagram</a> and <a href="https://twitter.com/_Flynnski">Twitter</a>.</p>
 </div>
 </div>-->
-  <hr>
-  <h2>Fluffy Kawaii Jo</h2>
-    <div class="row">
-        <div class="col-md-4">
-  <img src="../images/guests/FluffyKawaiiJo4.jpg" class="img-fluid" alt="Fluffy Kawaii Jo in a pile of giant sprinkles"/>
-</div>
-  <div class="col-md-8">
-  <p>Everybody Can Be Kawaii – No matter what age, gender, color or body type you are, you deserve to feel kawaii as fluff and good about yourself.</p>
-
-<p>Fluffy Kawaii Jo lives in Switzerland and her mission is to help you feel fantastic wearing the stuff that makes you happy. She makes videos about lolita fashion and Kawaii culture in general, from practical lifehacks for people new to the fashion, product reviews, event reports and interviews with people from the scene as well as entertaining and funny videos like her Lolitas vs Normies and Action Lolita series – proving that not just everybody can be kawaii, but you can be kawaii anywhere, doing anything as well.</p>
-  <p>You can find her at <a href="https://www.fluffykawaiijo.com">fluffykawaiijo.com</a>, on <a href="http://www.youtube.com/fluffykawaiijo">Youtube</a>, <a href="http://www.instagram.com/fluffykawaiijo">Instagram</a>, <a href="http://www.facebook.com/fluffykawaiijo">Facebook</a>, and <a href="http://www.patreon.com/fluffykawaiijo">Patreon</a>.</p>
-</div>
-</div>
 <!--
   <hr>
   <h2>GHOST GiRL GOODS</h2>
