--- a/event/vendors.html
+++ b/event/vendors.html
@@ -97,39 +97,135 @@
   <h1 class="sec01">
   <h1>RVR Vendors</h1>
   <hr>
-  <p>We are so excited to have all of our wonderful vendors at our 2021 event! We will be gradually adding our vendors to this page as their situation with respect to COVID-19 becomes clearer. Thank you for your patience! <a href="https://buttondown.email/prettyprincessclub">Subscribe to our email list for updates</a> and scroll to learn more about our confirmed vendors (so far!) for 2021:</p> 
+  <p>We are so excited to have all of our wonderful vendors at our 2021 event! We will be gradually adding our vendors to this page as their situation with respect to COVID-19 becomes clearer. Thank you for your patience! <a href="https://buttondown.email/prettyprincessclub">Subscribe to our email list for updates</a> and scroll to learn more about our confirmed vendors (so far!) for 2021 (in alphabetical order):</p> 
+  <hr>
   <h2><a href="https://bbandb.net/">BB&B</a></h2>
+      <div class="row">
+        <div class="col-md-4">
+  <img src="../images/bbandb_blk.png" class="img-fluid" alt="BB and B Logo"/>
+</div>
+  <div class="col-md-8">
   <p>BB and B is a boutique fake sweets jewelry house based in Los Angeles that has been creating limited run, handmade jewelry for the J-fashion (and alternative) community since 2011. Best known for our over the top macaron necklaces and other soft pastel creations, BB and B continue to explore new styles of jewelry for those who wish to combine their love for sweets and fashion.</p>
+</div>
+</div>
+<hr>
   <h2><a href="https://floresastorum.storenvy.com/">Flores Astorum</a></h2>
+    <div class="row">
+        <div class="col-md-4">
+  <img src="../images/vendors/floresastorum.png" class="img-fluid" alt="Flores Astorum logo"/>
+</div>
+  <div class="col-md-8">
   <p>Meaning "Flowers of the Stars", Flores Astorum aims to bridge the distance between Japanese indie brands and the rest of the world. Each designer is like a shining star, and their works are like flowers that make the world more beautiful piece by piece! °˖✧</p>
 <p>We are a sister shop to Hoshi no Hanazono, a shop that specializes in stocking items from indie designers all over the world and connecting them to fashion lovers in Japan.</p>
 <p>Part of Sunflower Seed Company.</p>
 </p>
+</div>
+</div>
+<hr>
   <h2><a href="https://fluffytori.com/">Fluffy Tori</a></h2>
+      <div class="row">
+        <div class="col-md-4">
+  <img src="../images/vendors/fluffytori.png" class="img-fluid" alt="Fluffy Tori logo"/>
+</div>
+  <div class="col-md-8">
   <p>Fluffy Tori is all about Kawaii and Lolita fashion. Brand owner Joëlle (aka Fluffy Kawaii Jo) from Switzerland and designer Mezzo from Germany work together to create fashion, accessories and stationery that will make you feel happy and kawaii as fluff.</p>
 <p>We create everything from our super popular enamel pins, stickers and jewellery up to dresses, sweaters and shoes in every size – usually featuring pastel colors, cute and magical little creatures and bright and cheerful themes that will put a smile on the face of anyone wearing them. 
 Occasionally, we also dip into more sophisticated Classic and Gothic Lolita themes or create some pop culture inspired items, because we firmly believe that anyone can be a magical fairy princess and a total nerd at the same time. ;) </p>
+</div>
+</div>
+<hr>
 <h2><a href="https://www.etsy.com/shop/KiraKiraKawaiiShoppe">Kira Kira Kawaii Shoppe</a></h2>
+    <div class="row">
+        <div class="col-md-4">
+  <img src="../images/vendors/k3s.jpg" class="img-fluid" alt="Kira Kira Kawaii Shoppe logo"/>
+</div>
+  <div class="col-md-8">
 <p>Kira Kira Kawaii Shoppe started from a passion for Japanese street fashion and sewing to evolve into a brand focused on sustainability made cute.</p>
 <p>To minimize impact on the planet, K3S uses upcycled and vintage materials to create one of a kind pieces. With the recent addition of the Beloveds section, the Shoppe now also offers vintage and secondhand offbrand pieces handpicked by shop owner Chizu to offer to the lolita community for accessibility and affordable pricing. And with the usage of recycled shipping materials, Kira Kira Kawaii Shoppe encourages its customers to think about their own eco footprint, and dares to ask the question: where do your clothes come from?</p>
+</div>
+</div>
+<hr>
   <h2><a href="https://kskawaii.com/">Kuroshiro Kawaii</a></h2>
+      <div class="row">
+        <div class="col-md-4">
+  <img src="../images/vendors/kuroshirokawaii.jpg" class="img-fluid" alt="Kuroshiro Kawaii logo"/>
+</div>
+  <div class="col-md-8">
   <p>Hey, all! We at Kuroshiro Kawaii want to ensure that the entire community in the Houston, TX area has access to quality Japanese fashion. We pride ourselves on having real connections to brand owners and designers, including Japanese, indie, and self-care brands. Kuroshiro Kawaii—it’s a name with multiple facets. When we were deciding on a name, we wanted one that would reflect the duality of the fashions we offer while at the same time being recognizable and inviting to the typical American in the area. The “kuro” in our name stands for punk, gothic, and visual fashion; while “shiro” stands for elegant, princely, and sweet lolita and ouji fashions. It also reflects another duality that is important to the attitude of our shop: good and evil, angel and devil, order and chaos. The words “kuro” and “shiro,” and their associated meaning in kanji, really pin down what we wanted for the look and feel of our shop and the brands we want to carry. </p>
+</div>
+</div>
+<hr>
   <h2><a href="https://www.etsy.com/shop/Lavendorium">Lavendorium</a></h2>
+      <div class="row">
+        <div class="col-md-4">
+  <img src="../images/vendors/lavendorium.jpg" class="img-fluid" alt="Lavendorium logo"/>
+</div>
+  <div class="col-md-8">
   <p>Lavendorium is an accessories brand that aims to bring a little extra decadence to any outfit! Every piece is designed and handmade by brand owner Mia with care and attention to detail. Every single one is created to become a treasured part of someone's beloved wardrobe! The items you'll find here are sometimes spooky, sometimes sweet, but always sparkly! </p>
+</div>
+</div>
+<hr>
   <h2><a href="https://oddmonster.co/">Odd Monster</a></h2>
+      <div class="row">
+        <div class="col-md-4">
+  <img src="../images/vendors/oddmonster.png" class="img-fluid" alt="Odd Monster logo"/>
+</div>
+  <div class="col-md-8">
   <p>25% of the profits from the event will be donated to the Equal Justice Initiative</p>
   <p>Odd Monster is inspired largely by 80's/90's pop culture, Japanese street fashion, as well as a dash of trashy horror and occult. Odd Monster is a slow fashion company: each piece is sewn, printed and/or embellished by hand by the designer herself, while material is sourced through local companies whenever possible. The goal is to create something a little bit cute, a little bit nerdy, and a little bit odd for all the other fashionable weirdos out there.</p>
+</div>
+</div>
+<hr>
   <h2><a href="https://www.puvithel.com/">Puvithel</a></h2>
+      <div class="row">
+        <div class="col-md-4">
+  <img src="../images/vendors/puvithel.png" class="img-fluid" alt="Puvithel logo"/>
+</div>
+  <div class="col-md-8">
   <p>Puvithel is a alternative fashion designer based in Pittsburgh, USA who has been making and designing original handmade jewelry, accessories, clothing and handbags for J-fashion and alternative styles since 2015. Puvithel is about unabashed, self-expression and spans many styles, including punk, gothic, lolita, and menhera. Regardless of style, Puvithel's items are loud - inspired by the in-your-face aesthetic of American gothic fashion. Puvithel believes fashion is a beneficial form of expression, a belief that is imbued in every item she makes. Every series has its own style and narrative to aid you in telling your own story.</p>
+</div>
+</div>
+<hr>
   <h2><a href="https://www.sugarstarcafe.com">Sugarstar Cafe</a></h2>
+      <div class="row">
+        <div class="col-md-4">
+  <img src="../images/vendors/sugarstarcafe.png" class="img-fluid" alt="Sugarstar Cafe logo"/>
+</div>
+  <div class="col-md-8">
   <p>Sugarstar Cafe is inspired by toys and everything sweet! It's filled with delicious treats and other colorful accessories to match any coordinate or casual wear~  \ʕ•ᴥ•ʔ/</p>
+</div>
+</div>
+<hr>
   <h2><a href="https://theblackribbon.com/">The Black Ribbon</a></h2>
+      <div class="row">
+        <div class="col-md-4">
+  <img src="../images/vendors/theblackribbon.png" class="img-fluid" alt="The Black Ribbon logo"/>
+</div>
+  <div class="col-md-8">
   <p>The Black Ribbon originally started in Atlanta, GA under the name Miscy as an esty shop all hand made by our designer, Halley. Around 2011 we changed our name and decided to move towards making more pieces in a factory setting. Our brand is currently produced in the San Francisco Bay Area, utilizing local factories as well as smaller productions made entirely in our own studio. We produce small batch runs of clothing inspired by some of our favorite eras in fashion . The Black Ribbon strives for quality and sticks to our values of no sweatshop labor, good quality textiles, and having our line as accessible as possible to all people. We strongly support diversity, a livable minimum wage, and making clothes as sustainable as we can. We hope you like knowing your clothes were made by people who care from start to finish.</p>
-  <h2><a href="https://twootietarte.com">Twootie Tarte (Remote)</a></h2>
-  <p>Saving the world by defeating the con funk one bath at a time. Come stop by for some amazing smells and products that redefine self care. Based out of Austin, Texas! We're encouraging fans to keep their hands clean, smell good and practice good hygiene.</p>
+</div>
+</div>
+<hr>
   <h2><a href="http://tulutulu.xyz/">Tulu Tulu (remote)</a></h2>
+      <div class="row">
+        <div class="col-md-4">
+  <img src="../images/vendors/tulutulu.jpg" class="img-fluid" alt="TuluTulu logo"/>
+</div>
+  <div class="col-md-8">
   <p>TuluTulu Lolita is an indie lolita shop based in Taiwan.</p>
   <p>Have you ever met a fairy who can help you spread the gold dust of your dreams? The fairy godmother who helped Cinderella to become a beautiful princess, has constantly taught the little fairy that they must show the all the girls across the world the magic of owning their beauty. The little fairy opened a shop - "Tulu Tulu Lolita", she wanted to send a beautiful blessing to every female in the world who has the heart of a lady!</p>
+</div>
+</div>
+<hr>
+  <h2><a href="https://twootietarte.com">Twootie Tarte (Remote)</a></h2>
+      <div class="row">
+        <div class="col-md-4">
+  <img src="../images/vendors/twootietarte.png" class="img-fluid" alt="Twootie Tarte logo"/>
+</div>
+  <div class="col-md-8">
+  <p>Saving the world by defeating the con funk one bath at a time. Come stop by for some amazing smells and products that redefine self care. Based out of Austin, Texas! We're encouraging fans to keep their hands clean, smell good and practice good hygiene.</p>
+</div>
+</div>
   <!--
   <h2><a href="https://basuragang.storenvy.com/">Basura Gang</a></h2>
   <p>Our motto is that pink is the new black! Kawaii anime inspired Pins, Patches, Accessories and clothing for cute babes! Come see all our cute and funny designs. Everything is designed with love and sass!</p>
