Add partner orgs section to main page

--- a/vegas.html
+++ b/vegas.html
@@ -129,6 +129,8 @@
 <h2 class="section-header">Our Sponsors</h2>
 <p><a href="https://bbandb.net/"><img src="images/bbandb_blk.png" class="img-fluid" alt="BB&B logo"/></a></p>
 <p><a href="https://arda-wigs.com/"><img src="images/arda-logo.png" width="200" class="img-fluid" alt="Arda Wigs logo"/></a><a href="https://kanekoshop.com/"><img src="images/kaneko.png" width="200" class="img-fluid" alt="Kaneko logo"/></a></p>
+<h2 class="section-header">Partner Organizations</h2>
+<p><a href="https://www.youtube.com/channel/UCDhEhvYEapENUxRGBN7LJMQ">JFashion on Demand</a> ♥ <a href="https://www.roseforet.com/">Rosé Forêt</a></p>
     <hr id ="insta">
   <p>Follow our journey on <a href="https://instagram.com/prettyprincess.club">Instagram</a>:</p>
 <!-- SnapWidget -->
