--- a/vegas.html
+++ b/vegas.html
@@ -97,7 +97,6 @@
     <h3>MGM Grand Las Vegas, NV</h3>
     <h3>November 19 - November 21, 2021</h3>
 <h1 class="sec01">
-<p>We are postponing our event until November 19 - 21 2021! Thank you for bearing with us throughout this process.</p>
 <p>
   <a href="./event/event-faq.html">FAQ</a> ♥ <a href="./event/programming.html">Programming and Schedule</a> ♥
               <a href="./event/reg.html">Registration</a> ♥
@@ -119,7 +118,7 @@
 <p>Alice falls down a rabbit hole - this time, into Las Vegas. Surrounded by unfamiliar sights and sounds, she sets out to explore, and finds mad hatters, white rabbits, games and cards, mysterious bottles, queens and kings, caterpillars chain-smoking over penny slots, strange grinning cats, and more...</p>
 <p><b>Please note that you do not have to dress in accordance to the theme at Royal Vegas Retreat 2021</b> - only adhere to our dress code, described in <a href="https://prettyprincess.club/event/event-faq.html">our event FAQ</a>.</p>
 <h2 class="section-header"></a>Where do I sign up?</h2>
-<p>Ticket reservations for 2021 begin June 26, 2021 on <a href="https://www.eventbrite.com/e/ppc-presents-royal-vegas-retreat-2021-tickets-52897344381">our Eventbrite page</a>, and you can reserve your room onsite at the MGM Grand right now via <a href="https://book.passkey.com/go/sroy1121mg">our Passkey portal</a>. See our <a href="./event/reg.html">registration</a>, <a href="./event/venue.html">venue</a>, and <a href="./event/event-faq.html">event FAQ</a> pages for more information.</p>
+<p>Due to your overwhelming enthusiasm, we are currently sold out of tickets! Those who reserved a ticket can pay the remaining price starting August 14, 2021 on <a href="https://www.eventbrite.com/e/ppc-presents-royal-vegas-retreat-2021-tickets-52897344381">our Eventbrite page</a>, and you can reserve your room onsite at the MGM Grand right now via <a href="https://book.passkey.com/go/sroy1121mg">our Passkey portal</a>. See our <a href="./event/reg.html">registration</a>, <a href="./event/venue.html">venue</a>, and <a href="./event/event-faq.html">event FAQ</a> pages for more information.</p>
 <h2 class="section-header">How do I learn about updates?</h2>
 <p><a href="https://buttondown.email/prettyprincessclub">Subscribe to our blog+email list</a> to get the latest information about Royal Vegas Retreat 2021 before it hits social media!</p>
 <h2 class="section-header">How do I support Pretty Princess Club and Royal Vegas Retreat?</h2>
