Mark K3S as remote

--- a/event/vendors.html
+++ b/event/vendors.html
@@ -134,7 +134,7 @@ Occasionally, we also dip into more sophisticated Classic and Gothic Lolita them
 </div>
 </div>
 <hr>
-<h2><a href="https://www.etsy.com/shop/KiraKiraKawaiiShoppe">Kira Kira Kawaii Shoppe</a></h2>
+<h2><a href="https://www.etsy.com/shop/KiraKiraKawaiiShoppe">Kira Kira Kawaii Shoppe (remote)</a></h2>
     <div class="row">
         <div class="col-md-4">
   <img src="../images/vendors/k3s.jpg" class="img-fluid" alt="Kira Kira Kawaii Shoppe logo"/>
