Add Basura Gang to vendors

--- a/event/vendors.html
+++ b/event/vendors.html
@@ -99,6 +99,16 @@
   <hr>
   <p>We are so excited to have all of our wonderful vendors at our 2021 event! We will be gradually adding our vendors to this page as their situation with respect to COVID-19 becomes clearer. Thank you for your patience! <a href="https://buttondown.email/prettyprincessclub">Subscribe to our email list for updates</a> and scroll to learn more about our confirmed vendors (so far!) for 2021 (in alphabetical order):</p> 
   <hr>
+    <h2><a href="https://basuragang.com/">Basura Gang</a></h2>
+      <div class="row">
+        <div class="col-md-4">
+  <img src="../images/vendors/basuragang.jpg" class="img-fluid" alt="Basura Gang fuzzy pom earrings"/>
+</div>
+  <div class="col-md-8">
+  <p>Our motto is that pink is the new black! Kawaii anime inspired Pins, Patches, Accessories and clothing for cute babes! Come see all our cute and funny designs. Everything is designed with love and sass!</p>
+</div>
+</div>
+<hr>
   <h2><a href="https://bbandb.net/">BB&B</a></h2>
       <div class="row">
         <div class="col-md-4">
@@ -227,8 +237,6 @@ Occasionally, we also dip into more sophisticated Classic and Gothic Lolita them
 </div>
 </div>
   <!--
-  <h2><a href="https://basuragang.storenvy.com/">Basura Gang</a></h2>
-  <p>Our motto is that pink is the new black! Kawaii anime inspired Pins, Patches, Accessories and clothing for cute babes! Come see all our cute and funny designs. Everything is designed with love and sass!</p>
   <h2><a href="https://biopolitics.thebase.in">Bio・Politics</a></h2>
   <p>性別や年齢に捕われない、自由な表現をテーマにした大人Rock</p>
   <p>Adult Rock with the theme of free expression, regardless of gender or age</p>
