--- a/event/vendors.html
+++ b/event/vendors.html
@@ -119,7 +119,7 @@
 </div>
 </div>
 <hr>
-  <h2><a href="https://floresastorum.storenvy.com/">Flores Astorum</a></h2>
+  <h2><a href="https://floresastorum.storenvy.com/">Flores Astorum (Remote)</a></h2>
     <div class="row">
         <div class="col-md-4">
   <img src="../images/vendors/floresastorum.png" class="img-fluid" alt="Flores Astorum logo"/>
