Update Kaneko branding and add to vendors page

--- a/event/vendors.html
+++ b/event/vendors.html
@@ -144,6 +144,18 @@ Occasionally, we also dip into more sophisticated Classic and Gothic Lolita them
 </div>
 </div>
 <hr>
+<h2><a href="https://kanekoshop.com/">Kaneko (remote)</a></h2>
+    <div class="row">
+        <div class="col-md-4">
+  <img src="../images/vendors/kaneko.jpg" class="img-fluid" alt="Elizaveta modeling Kaneko dresses"/>
+</div>
+  <div class="col-md-8">
+<p>Independent clothing and accessories brand based in Moscow, Russia. Founded in 2017 by Mikhail and Elizaveta Kaneko, the brand provides a big range of items including clothing, headwear and accessories in their unique aesthetic and with great attention to every detail. </p>
+<p>All of our items are made in Russia with great care and love, using mostly natural fibers. To avoid waste of materials, some of our items are released via pre-order system.</p>
+<p>In our shop we welcome everyone, regardless of their cultural, religious, gender and sexual self identification. We also try our best to make our items accessible for people of all sizes.</p>
+</div>
+</div>
+<hr>
 <h2><a href="https://www.etsy.com/shop/KiraKiraKawaiiShoppe">Kira Kira Kawaii Shoppe (remote)</a></h2>
     <div class="row">
         <div class="col-md-4">
