Add Kei Collective, Paradise Rose, Star Sweets to vendors

--- a/event/vendors.html
+++ b/event/vendors.html
@@ -156,6 +156,17 @@ Occasionally, we also dip into more sophisticated Classic and Gothic Lolita them
 </div>
 </div>
 <hr>
+<h2><a href="https://www.keicollective.com/">Kei Collective</a></h2>
+    <div class="row">
+        <div class="col-md-4">
+  <img src="../images/vendors/keicollective.png" class="img-fluid" alt="Black and rainbow Kei Collective logo"/>
+</div>
+  <div class="col-md-8">
+<p>Kei Collective is an AZ based brick-and-mortar store featuring independent artists who specialize in alternative styles. We believe that fashion is an ever changing and evolving form of self expression. Our store offers a wide selection of goods with a dynamic split between our ‘light side’ and ‘dark side’ of the store.</p>
+<p>Our mission is to support artists and fashion lovers in their quest for self expression. Our walls are filled with art, clothing, patches, pins, jewelry, home goods, and more!</p>
+</div>
+</div>
+<hr>
 <h2><a href="https://www.etsy.com/shop/KiraKiraKawaiiShoppe">Kira Kira Kawaii Shoppe (remote)</a></h2>
     <div class="row">
         <div class="col-md-4">
@@ -198,6 +209,18 @@ Occasionally, we also dip into more sophisticated Classic and Gothic Lolita them
 </div>
 </div>
 <hr>
+  <h2><a href="https://www.etsy.com/shop/ParadiseRose">Paradise Rose Shop (Remote)</a></h2>
+      <div class="row">
+        <div class="col-md-4">
+  <img src="../images/vendors/paradiserose.png" class="img-fluid" alt="Chibi Paradise Rose log"/>
+</div>
+  <div class="col-md-8">
+  <p>Paradise Rose Shop is a SF based brand that focuses on handmade accessories that compliment wardrobes and complete outfits. Many pieces are one-of-a-kind handmade by the designer, often live on stream on Twitch!</p>
+  <p>The idea behind Paradise Rose is to provide those who love Japanese fashion with handmade, affordable jewelry and accessories that compliment your wardrobe and complete the outfit. Jewelry can be an excellent way to make a coordinate unique and your own. Pieces created here are done by hand, resulting in one-of-a-kind pieces that belong to you alone.
+</p>
+</div>
+</div>
+<hr>
   <h2><a href="https://www.puvithel.com/">Puvithel</a></h2>
       <div class="row">
         <div class="col-md-4">
@@ -205,6 +228,16 @@ Occasionally, we also dip into more sophisticated Classic and Gothic Lolita them
 </div>
   <div class="col-md-8">
   <p>Puvithel is a alternative fashion designer based in Pittsburgh, USA who has been making and designing original handmade jewelry, accessories, clothing and handbags for J-fashion and alternative styles since 2015. Puvithel is about unabashed, self-expression and spans many styles, including punk, gothic, lolita, and menhera. Regardless of style, Puvithel's items are loud - inspired by the in-your-face aesthetic of American gothic fashion. Puvithel believes fashion is a beneficial form of expression, a belief that is imbued in every item she makes. Every series has its own style and narrative to aid you in telling your own story.</p>
+</div>
+</div>
+<hr>
+  <h2><a href="https://www.etsy.com/shop/starsweets/">Star Sweets</a></h2>
+      <div class="row">
+        <div class="col-md-4">
+  <img src="../images/vendors/starsweets.png" class="img-fluid" alt="Star Sweets logo"/>
+</div>
+  <div class="col-md-8">
+  <p>Star Sweets is a handmade j-fashion accessories and artist shop!</p>
 </div>
 </div>
 <hr>
