--- a/event/event-faq.html
+++ b/event/event-faq.html
@@ -108,7 +108,11 @@
 <p>Buy some merch or send us a donation at our <a href="https://shop.prettyprincess.club">shop</a>, and become a paid subscriber to our <a href="https://buttondown.email/prettyprincessclub">blog+email list!</a></p>
   <h4>How will this event be affected by COVID-19?</h4>
   <p>As a result of COVID-19, we held <a href="../virtual.html">an online event in 2020</a> and postponed our event to 2021. We are making <a href="https://buttondown.email/prettyprincessclub/archive/whats-changing-for-rvr-2021/">a number of immediate changes</a> to ensure the safety of our event. Please see <a href="https://buttondown.email/prettyprincessclub/archive/whats-changing-for-rvr-2021/">our post on Buttondown</a> to understand those changes.</p>
-  <p>The situation with respect to COVID is changing rapidly, and we are already re-evaluating several of the changes set out in the blog post above. The one thing that ABSOLUTELY will not change is that ALL ATTENDEES MUST BE FULLY VACCINATED TO ATTEND ROYAL VEGAS RETREAT 2021. "Fully vaccinated" means that it has been at least 2 weeks since their final dose of vaccine. Attendees must show proof of vaccination to pick up their badge. Attendees arriving from inside the US must show their vaccine card. Please stay tuned for concrete guidance on proof of vaccination for attendees outside of the US.</p>
+  <p>Please note that ALL ATTENDEES MUST BE FULLY VACCINATED TO ATTEND ROYAL VEGAS RETREAT 2021. "Fully vaccinated" means that it has been at least 2 weeks since their final dose of vaccine. Attendees must show proof of vaccination to pick up their badge. Attendees arriving from inside the US must show their vaccine card. Please stay tuned for concrete guidance on proof of vaccination for attendees outside of the US.</p>
+  <h4>Do I have to wear a mask to attend Royal Vegas Retreat 2021?</h4>
+  <p>Yes. All attendees must wear a face mask except when eating or drinking at Royal Vegas Retreat 2021.</p>
+  <h4>Do I have to distance myself from other parties at Royal Vegas Retreat 2021?</h4>
+  <p>While we are not enforcing social distancing at our event, please be respectful and err on the side of giving space to people outside of your household or travel group. We are working with the venue to ensure that our floor plans provide everyone ample space.</p>
   <h3 class="section-header">The Venue</h3>
   <p>See also <a href="./venue.html">our venue page</a>.</p>
   <h4>How do I reseve my room onsite?</h4>
@@ -124,19 +128,19 @@
   <h3 class="section-header">Registration</h3>
   <p>See also <a href="./reg.html">our main registration page</a>.</p>
   <h4>Where do I buy my ticket?</h4>
-  <p>Please see our <a href="https://www.eventbrite.com/e/ppc-presents-royal-vegas-retreat-2020-tickets-52897344381">Eventbrite page</a> to purchase your ticket once sales open on June 26, 2021.</p>
+  <p>Please see our <a href="https://www.eventbrite.com/e/ppc-presents-royal-vegas-retreat-2020-tickets-52897344381">Eventbrite page</a> to purchase a ticket or pay the remainder of your reservation starting August 14th at 12:00 PM PT.</p>
   <h4>How will ticket sales work in 2021?</h4>
   <p>Ticket reservations opened on <b>June 26th at 12:00 PM PT</b>. We sold out of ticket reservations the same day they began. Thank you all for your support!</p>
   <p><b>GA tickets</b> cost <b>$5</b> to reserve. <b>VIP tickets</b> cost <b>$20</b> to reserve. Only GA and VIP tickets were available during the reservation period.</p>
   <p>On <b>August 14th</b> we will ask everyone who reserved a ticket during the reservation period to pay the remainder of their ticket price. At this time, you will pay the remaining <b>$120</b> for <b>GA tickets</b> and <b>$180</b> for <b>VIP tickets</b>.</p> 
-  <p>In addition, if any tickets remain after the reservation period, or if we are able to increase our attendance cap, we will offer <b>GA, VIP, and Limited-Access Partner Pass tickets</b> at full price. It is not clear if we will be able to increase our attendance cap to offer more GA tickets. We are completely sold out of VIP tickets and will not be able to add any more. We have a number of partner passes available. Prices will be as follows:
+  <p>In addition, we are able to offer a limited number of <b>VIP and GA</b> at full price. We have a number of partner passes available. Prices will be as follows:
     <ul>
       <li><b>GA</b>: $125</li>
       <li><b>VIP</b>: $200</li>
       <li><b>Partner Pass</b>: $20</li>
     </ul>
   </p>
-  <p>We are no longer offering Sunday-only tickets. The Partner Pass is a special ticket type for partners of attendees who do not wear J-fashion. Partner Pass ticketholders are not required to adhere to the dress code. However, they may only access the vendors' area and fashion show content.</p>
+  <p>We are no longer offering Sunday-only tickets. The Partner Pass is a special ticket type for partners of attendees who do not wear J-fashion. Partner Pass ticketholders are not required to adhere to the dress code. However, they may only access the vendors' area, fashion show content, and community-provided content.</p>
   <h4>Why do I have to reserve a ticket first? Why is the process for buying a ticket different?</h4>
   <p>We are offering this reserve option to help mitigate the risk involved in committing to an event while the global pandemic is ongoing. In the event that we cannot hold our event safely, those who reserved a ticket in 2021 will be refunded. In the interim, we only require you to put down a minimal down payment.</p>
   <h4>I bought a ticket in 2020. Is it still good for 2021?</h4>
@@ -144,9 +148,7 @@
   <h4>What are the perks associated with VIP tickets?</h4>
   <p>VIP ticketholders get a premium goody bag with gifts from our sponsors, access to exclusive before- and after-parties, and priority seating for afternoon tea and all content. We will provide specific details in the coming months as we get closer to our event. The remaining VIP tickets are in very short supply, so set an alarm if you want one!</p>
   <h4>Ticket reservations sold out before I could reserve my ticket. Will there be more?</h4>
-  <p>We are in the process of deciding whether or not to increase our total attendance cap to offer more GA tickets. We are waiting on more data about the COVID-19 delta variant, and we need to understand whether we have the space for everyone to move about safely and comfortably if we increase the total attendance. We will make a decision and an announcement in early August before we ask people who reserved a ticket to pay the remaining cost.</p>
-  <h4>Will there be more VIP tickets?</h4>
-  <p>Unfortunately, we cannot sell any more VIP tickets at this time.</p>
+  <p>Yes, we are able to offer a limited number of VIP and GA tickets at full price starting on August 14 at 12:00 PM PT.</p>
   <h4>When will Partner Passes go on sale?</h4>
   <p>Partner Passes will go on sale starting August 14 at 12 PM PT, at the same time when those who reserved tickets will be asked to pay the remaining cost.</p>
   <h4>I have a discount code for a ticket. When can I use it?</h4>
