--- a/event/reg.html
+++ b/event/reg.html
@@ -100,7 +100,7 @@
   <p>We sell tickets and ticket reservations on <a href="https://www.eventbrite.com/e/ppc-presents-royal-vegas-retreat-2021-tickets-52897344381">our Eventbrite page</a>.</p>
   <p>We have sold out of ticket reservations for 2021! Thank you all for your support.</p>
   <p>On <b>August 14th</b> we will ask everyone who reserved a ticket during the reservation period to pay the remainder of their ticket price. At this time, you will pay the remaining <b>$120</b> for <b>GA tickets</b> and <b>$180</b> for <b>VIP tickets</b>.</p> 
-  <p>In addition, if any tickets remain after the reservation period, or if we are able to increase our attendance cap, we will offer <b>GA, VIP, and Limited-Access Partner Pass tickets</b> at full price. It is not clear if we will be able to increase our attendance cap for GA tickets. We are completely sold out of VIP tickets and will not be able to add any more. We have a number of partner passes available. Prices will be as follows:
+  <p>In addition, we are able to offer a limited number of VIP and GA tickets at full price. We have a number of partner passes available. Prices will be as follows:
     <ul>
       <li><b>GA</b>: $125</li>
       <li><b>VIP</b>: $200</li>
@@ -108,7 +108,8 @@
     </ul>
   </p>
   <p>VIP ticketholders receive an exclusive premium goody bag with gifts from our sponsors, access to exclusive before- and after-parties, and priority seating for afternoon tea and all content.</p>
-  <p>We are no longer offering Sunday-only tickets. The Partner Pass is a special ticket type for partners of attendees who do not wear J-fashion. Partner Pass ticketholders are not required to adhere to the dress code. However, they may only access the vendors' area and fashion show content.</p>
+  <p>The Partner Pass is a special ticket type for partners, parents, and friends of attendees who do not wear J-fashion but wish to travel together. Partner Pass ticketholders are not required to adhere to the dress code. However, they may only access the vendors' area, fashion show content, and community-provided content (more info coming soon). We may expand the scope of the partner pass as we decide what other programming we can offer safely at our event.</p>
+  <p>We are no longer offering Sunday-only tickets.</p> 
   <p>We are proud to announce that we have an official room block with the MGM Grand with an excellent event rate. Please visit our <a href="./venue.html">Room Block and Venue</a> page for more information and to make your reservation with the MGM Grand now!</p>
   <p>Please see our <a href="./event-faq.html">Event FAQ</a> page for common questions about registration.</p>
   <hr>
