Update nav so RVO is now Past Events

--- a/vegas.html
+++ b/vegas.html
@@ -43,20 +43,14 @@
             </p>
             </div>
         </li>
-        <li>
+            <li>
               <button class="btnList" onclick="openList('2')">
-              <span class="drop">Royal Vegas Online</span>
-              <span class="acc">Royal Vegas Online</span>
+              <span class="drop">Past Events</span>
+              <span class="acc">Past Events</span>
             </button>
             <div class="content_list left" id="thisList_2">
               <p class="sub-menu">
-               <a href="./virtual.html" >RVO Home</a></br>
-              <a href="./virtual/rvo-faq.html">Event FAQ</a></br>
-              <a href="./virtual/schedule.html">Programming and Schedule</a></br>
-              <a href="./virtual/tea.html">Virtual Tea Party</a></br>
-              <a href="./virtual/trivia.html">Virtual Pub Trivia</a></br>
-              <a href="./virtual/charity.html">Charity Drawing</a></br>
-              <a href="./virtual/contest.html">Fashion Walk and Coord Contest</a>
+               <a href="./virtual.html" >Royal Vegas Online 2020</a></br>
             </p>
             </div>
         </li>
