Prune remaining references to substack

--- a/virtual.html
+++ b/virtual.html
@@ -133,7 +133,7 @@ November 15, 2 PM PT: Tea party, last call for charity drawing entries</p>
 
 <hr id="cocktail">
 <h4 class="section-header">Signature Event Cocktail</h4>
-<p>The Vegas Royal-Tea Cocktail is a vacation in a glass! See our recipe on <a href="https://prettyprincessclub.substack.com/p/make-the-rvo-signature-cocktail?r=2jjnh&utm_campaign=post&utm_medium=web&utm_source=copy">Substack</a>, then head to our <a href="https://shop.prettyprincess.club">official merch store</a> to pick up your pouch of Vegas Royal-Tea.</p>
+<p>The Vegas Royal-Tea Cocktail is a vacation in a glass! See our recipe on <a href="https://buttondown.email/prettyprincessclub/archive/make-the-rvo-signature-cocktail/">Buttondown</a>, then head to our <a href="https://shop.prettyprincess.club">official merch store</a> to pick up your pouch of Vegas Royal-Tea.</p>
 <hr id="teamenu">
 <h4 class="section-header">Suggested Tea Menu</h4>
 <p>Feeling ambitious and want to make something delicious? Your pals at <a href="https://bayareakei.org">Bay Area Kei</a> have put together a killer menu guaranteed to make you feel like royalty.</p>
