--- a/virtual/charity.html
+++ b/virtual/charity.html
@@ -122,7 +122,7 @@ people every day.<br>
 <p>You must leave your post up until the drawing is finished. Once posted, you must <a href="https://forms.gle/MQx6SHSDU2x6VoFK8">fill out our entry form</a> between October 10 and November 15. Submissions close Sunday, November 15 at 2:00 PM PT.</p>
 
 <hr id="substack">
-    <p>To get the latest info about Royal Vegas Online before it hits social media, <a href="https://prettyprincessclub.substack.com">subscribe to our Substack list!</a> We promise not to spam you, and you can unsubscribe at any time.</p>
+    <p>To get the latest info about Royal Vegas Online before it hits social media, <a href="https://buttondown.email/prettyprincessclub">subscribe to our Buttondown list!</a> We promise not to spam you, and you can unsubscribe at any time.</p>
     <hr id ="insta">
   <p>Follow our journey on <a href="https://instagram.com/prettyprincess.club">Instagram</a>:</p>
 <!-- SnapWidget -->
