--- a/virtual/contest.html
+++ b/virtual/contest.html
@@ -105,7 +105,7 @@
 <p>You can register starting October 10 at 12:00 PM PT using our <a href="https://forms.gle/ZvmHNYP2XrDamQxh8">Fashion Walk and Coord Contest entry form</a>.</p>
 
 <hr id="substack">
-    <p>To get the latest info about Royal Vegas Online before it hits social media, <a href="https://prettyprincessclub.substack.com">subscribe to our Substack list!</a> We promise not to spam you, and you can unsubscribe at any time.</p>
+    <p>To get the latest info about Royal Vegas Online before it hits social media, <a href="https://buttondown.email/prettyprincessclub">subscribe to our Buttondown list!</a> We promise not to spam you, and you can unsubscribe at any time.</p>
     <hr id ="insta">
   <p>Follow our journey on <a href="https://instagram.com/prettyprincess.club">Instagram</a>:</p>
 <!-- SnapWidget -->
