--- a/virtual/rvo-faq.html
+++ b/virtual/rvo-faq.html
@@ -109,7 +109,7 @@
 <p>Tl;dr: it doesn't. We are still hoping to hold our <a href="../vegas.html">flagship in-person event Royal Vegas Retreat</a> in November 2021.</p>
 
 <hr id="substack">
-    <p>To get the latest info about Royal Vegas Online before it hits social media, <a href="https://prettyprincessclub.substack.com">subscribe to our Substack list!</a> We promise not to spam you, and you can unsubscribe at any time.</p>
+    <p>To get the latest info about Royal Vegas Online before it hits social media, <a href="https://buttondown.email/prettyprincessclub">subscribe to our Buttondown list!</a> We promise not to spam you, and you can unsubscribe at any time.</p>
     <hr id ="insta">
   <p>Follow our journey on <a href="https://instagram.com/prettyprincess.club">Instagram</a>:</p>
 <!-- SnapWidget -->
