--- a/virtual/tea.html
+++ b/virtual/tea.html
@@ -110,7 +110,7 @@
   <a href="https://docs.google.com/forms/d/e/1FAIpQLSegJWbCFaJIGB1JKQ0dsPgkaYpRVEqMmtsP7p-vMM7cqU0uxw/viewform?usp=sf_link">Tea Party Signup Form</a>. If the Tea Party Signup Form is not taking responses after October 10 at 12:00 PM PT, we have reached capacity. Please fill out the <a href="https://docs.google.com/forms/d/e/1FAIpQLSfhJIgTvXIHOumVCmxCimvUBfPzNKUhOTdBZo4ErC_6CMJ-Hg/viewform?usp=sf_link">Tea Party WAITLIST Form</a> instead.
 
 <hr id="substack">
-    <p>To get the latest info about Royal Vegas Online before it hits social media, <a href="https://prettyprincessclub.substack.com">subscribe to our Substack list!</a> We promise not to spam you, and you can unsubscribe at any time.</p>
+    <p>To get the latest info about Royal Vegas Online before it hits social media, <a href="https://buttondown.email/prettyprincessclub">subscribe to our Buttondown list!</a> We promise not to spam you, and you can unsubscribe at any time.</p>
     <hr id ="insta">
   <p>Follow our journey on <a href="https://instagram.com/prettyprincess.club">Instagram</a>:</p>
 <!-- SnapWidget -->
