--- a/virtual/trivia.html
+++ b/virtual/trivia.html
@@ -108,7 +108,7 @@
   <a href="https://docs.google.com/forms/d/e/1FAIpQLScqlBe3_CAhbomHmAdMKeAmF4l71AUMkssj2I3tekWzuwNdRA/viewform?usp=sf_link">Pub Trivia Free Agent WAITLIST Form (for individuals without a team)</a> instead.</p>
 
 <hr id="substack">
-    <p>To get the latest info about Royal Vegas Online before it hits social media, <a href="https://prettyprincessclub.substack.com">subscribe to our Substack list!</a> We promise not to spam you, and you can unsubscribe at any time.</p>
+    <p>To get the latest info about Royal Vegas Online before it hits social media, <a href="https://buttondown.email/prettyprincessclub">subscribe to our Buttondown list!</a> We promise not to spam you, and you can unsubscribe at any time.</p>
     <hr id ="insta">
   <p>Follow our journey on <a href="https://instagram.com/prettyprincess.club">Instagram</a>:</p>
 <!-- SnapWidget -->
