--- a/virtual/schedule.html
+++ b/virtual/schedule.html
@@ -108,7 +108,7 @@
 <p>Get together in teams of 6 for Lolita Fashion Pub Trivia. Test your knowledge of the fashion, our favorite inspirations, and more over 6 eclectic rounds of 8 questions each. Prizes for the 1st place team. Free Agents welcome! <a href="./trivia.html">Learn more and sign up.</a>
 <h6 class="section-header">8:15 PM ET / 5:15 PM PT: DIY with PPC: <a href="https://buttondown.email/prettyprincessclubp/make-the-rvo-signature-cocktail">Vegas Royal-Tea Cocktail</a> Mix-Along</h6>
 <p>Hosted by Nif</p>
-<p>Looking for a little vacation in a glass? Grab a pouch of our <a href="https://shop.prettyprincess.club/product/vegas-royal-tea/8">signature Vegas Royal-Tea</a> from our <a href="https://shop.prettyprincess.club/">merch store</a> and get ready for a DIY cocktail mix-along. Check our <a href="https://prettyprincessclub.substack.com/p/make-the-rvo-signature-cocktail">blog post</a> for all the ingredients and steps to do in advance, and get ready to feel like Royalty.</p>
+<p>Looking for a little vacation in a glass? Grab a pouch of our <a href="https://shop.prettyprincess.club/product/vegas-royal-tea/8">signature Vegas Royal-Tea</a> from our <a href="https://shop.prettyprincess.club/">merch store</a> and get ready for a DIY cocktail mix-along. Check our <a href="https://buttondown.email/prettyprincessclubp/make-the-rvo-signature-cocktail">blog post</a> for all the ingredients and steps to do in advance, and get ready to feel like Royalty.</p>
 <h6 class="section-header">9:00 PM ET / 6:00 PM PT: Turn up with DJ JIMNICRICKET</h6>
 <p>Hosted by <a href="https://soundcloud.com/jimnicricket">DJ JIMNICRICKET</a> on <a href="https://twitch.tv/jimnicricket">https://twitch.tv/jimnicricket</a></p>
 <p>Get hype and dance along with a live DJ set guaranteed to make your evening happy.</p>
@@ -171,7 +171,7 @@ You will learn how to make a basic bow as well as how to alter the design to mak
 <p>Hosted by PPC, <a href="https://www.instagram.com/jfashionondemand/">JFashion on Demand</a>, <a href="https://bayareakei.org">Bay Area Kei</a>, and friends.</p>
 <p>We announce contest winners, say thank you to all the wonderful people who made this happen, and tell you what's next in the world of virtual J-fashion events!</p>
 <hr id="substack">
-    <p>To get the latest info about Royal Vegas Online before it hits social media, <a href="https://prettyprincessclub.substack.com">subscribe to our Substack list!</a> We promise not to spam you, and you can unsubscribe at any time.</p>
+    <p>To get the latest info about Royal Vegas Online before it hits social media, <a href="https://buttondown.email/prettyprincessclub">subscribe to our Buttondown list!</a> We promise not to spam you, and you can unsubscribe at any time.</p>
     <hr id ="insta">
   <p>Follow our journey on <a href="https://instagram.com/prettyprincess.club">Instagram</a>:</p>
 <!-- SnapWidget -->
