Small programming reword

--- a/event/programming.html
+++ b/event/programming.html
@@ -90,7 +90,7 @@
   <h1 class="sec01">
   <h1>RVR Programming</h1>
   <hr>
-  <p>We are postponing our event to November 2021, and as such, we will be reworking our schedule and planned content. We anticipate that most of our planned programming will stay the same as our 2020 lineup. Stay tuned for updates in early 2021.</p>
+  <p>We are reworking our schedule and planned content. We anticipate that most of our planned programming will stay the same as our planned 2020 lineup. Stay tuned for updates this fall!</p>
   <!--<p>We're planning an incredible event stacked with fashion shows, a tea party, EGL trivia, games, panels, and shopping.</p>
   <p>We will release more information about official event programming in 2020, including special guest panels and VIP events.</p>
   <p>Applications for models and coordinate contest entrants will open in August 2020.</p>
