--- a/event/event-faq.html
+++ b/event/event-faq.html
@@ -127,7 +127,7 @@
   <p>Ticket reservations opened on <b>June 26th at 12:00 PM PT</b>. We sold out of ticket reservations the same day they began. Thank you all for your support!</p>
   <p><b>GA tickets</b> cost <b>$5</b> to reserve. <b>VIP tickets</b> cost <b>$20</b> to reserve. Only GA and VIP tickets were available during the reservation period.</p>
   <p>On <b>August 14th</b> we will ask everyone who reserved a ticket during the reservation period to pay the remainder of their ticket price. At this time, you will pay the remaining <b>$120</b> for <b>GA tickets</b> and <b>$180</b> for <b>VIP tickets</b>.</p> 
-  <p>In addition, we are able to offer a limited number of <b>VIP and GA</b> at full price. We have a number of partner passes available. Prices will be as follows:
+  <p>In addition, we are able to offer a limited number of <b>VIP and GA tickets</b> at full price. We have a number of partner passes available. Prices will be as follows:
     <ul>
       <li><b>GA</b>: $125</li>
       <li><b>VIP</b>: $200</li>
